[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-jsonschema"
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.11"
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pydantic >=2.8.0, <3.0.0"]

[project.urls]
Documentation = "https://github.com/dbt-labs/dbt-jsonschema/blob/main/README.md"
Issues = "https://github.com/dbt-labs/dbt-jsonschema/issues"
Source = "https://github.com/dbt-labs/dbt-jsonschema"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
